--- a/capstone-crud/src/app/consumable-reports/consumable-reports.component.html
+++ b/capstone-crud/src/app/consumable-reports/consumable-reports.component.html
@@ -1,86 +1,166 @@
 <div class="container-consumable-reports">
-  <div class="container-inside" >
+  <div class="container-inside">
     <div class="card">
-            <p>Consumable Reports</p>
-    
-    <form>
-      <div class="container-form-group">
-        <div class="form-group">
-          <label>Course: </label>
-          <select [(ngModel)]="CourseID" class="form-control" [ngModelOptions]="{standalone: true}" (change)="onCourseChange()">
-            <option *ngFor="let CourseItem of CourseArray" [value]="CourseItem.CourseID">{{ CourseItem.CourseName }}</option>
-          </select>   
-        </div>
-
-        <div class="form-group">
-            <label>Consumable: </label>
-            <select [(ngModel)]="ConsumableID" class="form-control" [ngModelOptions]="{standalone: true}">
-              <option *ngFor="let ConsumableItem of ConsumableArrayForSelectedCourse" [value]="ConsumableItem.ConsumableID">{{ ConsumableItem.ConsumableName }}</option>
-            </select>
-        </div>
-
-        <div class="form-group">
-            <label>Borrower Name: </label>
-            <select [(ngModel)]="AccountID" class="form-control" [ngModelOptions]="{standalone: true}">
-              <option *ngFor="let AccountItem of AccountsArray"  [value]="AccountItem.AccountID">{{ AccountItem.FullName }}</option>
-            </select>
-        </div>
-        <div class="form-group">
-          <label>Quantity:</label>
-          <input type="number" [(ngModel)]="Quantity" [ngModelOptions]="{standalone: true}" class="form-control" placeholder="Enter Quantity">
-        </div>
+      <div class="header">
+        <p>
+          <mat-icon fontIcon="assignment_turned_in" aria-hidden="false">
+          </mat-icon
+          >Consumable Reports
+        </p>
       </div>
+      <div class="loader-container" *ngIf="!isResultLoaded">
+        <div class="loader"></div>
+      </div>
+      <form>
+        <div class="container-form-group">
+          <div class="custom-select">
+            <div class="form-group">
+              <label>Course: </label>
+              <select
+                [(ngModel)]="CourseID"
+                class="form-control"
+                [ngModelOptions]="{ standalone: true }"
+                (change)="onCourseChange()"
+              >
+                <option
+                  *ngFor="let CourseItem of CourseArray"
+                  [value]="CourseItem.CourseID"
+                >
+                  {{ CourseItem.CourseName }}
+                </option>
+              </select>
+            </div>
+          </div>
 
-        <!-- <div class="form-group">
-            <label>Return Date</label>
-            <input type="date" [(ngModel)]="DateReturned" [ngModelOptions]="{standalone: true}" [min]="minDate" class="form-control" id="DateReturned" placeholder="DD-MM-YYYY">
-          </div> -->
-        
-        <div class="container-button">
-        <button type="submit" class="btn btn-primary mt-4" (click)="save()" >Save</button>
-        <button type="button" class="btn btn-danger" (click)="register()">Add</button>
+          <div class="form-group">
+            <label>Consumable: </label>
+            <select
+              [(ngModel)]="ConsumableID"
+              class="form-control"
+              [ngModelOptions]="{ standalone: true }"
+            >
+              <option
+                *ngFor="let ConsumableItem of ConsumableArrayForSelectedCourse"
+                [value]="ConsumableItem.ConsumableID"
+              >
+                {{ ConsumableItem.ConsumableName }}
+              </option>
+            </select>
+          </div>
+
+          <div class="form-group">
+            <label>Borrower Name: </label>
+            <select
+              [(ngModel)]="AccountID"
+              class="form-control"
+              [ngModelOptions]="{ standalone: true }"
+            >
+              <option
+                *ngFor="let AccountItem of AccountsArray"
+                [value]="AccountItem.AccountID"
+              >
+                {{ AccountItem.FullName }}
+              </option>
+            </select>
+          </div>
+          <div class="form-group">
+            <label>Quantity:</label>
+            <input
+              type="number"
+              [(ngModel)]="Quantity"
+              [ngModelOptions]="{ standalone: true }"
+              class="form-control"
+              placeholder="Enter Quantity"
+            />
+          </div>
         </div>
-       
+
+        <div class="container-button">
+          <button type="button" class="btn btn-danger" (click)="register()">
+            <mat-icon fontIcon="add" aria-hidden="false"></mat-icon>
+            Add
+          </button>
+          <button type="submit" class="btn btn-primary mt-4" (click)="save()">
+            <mat-icon fontIcon="save" aria-hidden="false"></mat-icon>
+            Save
+          </button>
+        </div>
+        <div class="pdf-button">
+          <input
+            type="button"
+            value="Download PDF"
+            class="btn btn-success"
+            (click)="SavePDF()"
+          />
+        </div>
       </form>
     </div>
-     
 
-  <div class="container-table">
-  <table class="container" id="content" #content cellspacing="0" >
-    <thead>  
-      <h1 *ngIf="!isResultLoaded">Loading.................</h1>   
-    <tr>
-        <th scope="col">TransactionEquipID</th>
-        <th scope="col">Course ID</th>
-        <th scope="col">Consumable Name</th>   
-        <th scope="col">Account ID</th>  
-        <th scope="col">ID Number</th>  
-        <th scope="col">Quantity</th> 
-        <th scope="col">Date Created</th> 
-        <th scope="col">Actions</th> 
-        <!-- <th scope="col">Date Returned</th>  -->
-      </tr>
-    </thead>
-    <tbody>
-        <!-- | paginate: { itemsPerPage: itemsPerPage, currentPage: p, totalItems: ConsumableArray.length } -->
-        <tr *ngFor="let TransactionItem of TransactionArray ">
-        <td>{{ TransactionItem.TransactionConsumeID }}</td>
-        <td>{{ getCourseName(TransactionItem.CourseID) }}</td>
-        <td>{{ getConsumableName(TransactionItem.ConsumableID) }}</td>
-        <td>{{ getAccountName(TransactionItem.AccountID) }}</td>
-        <td>{{ getAccountDetails(TransactionItem.AccountID)?.StudentNum }}</td>
-        <td>{{ TransactionItem.Quantity }}</td>
-        <td>{{ TransactionItem.DateCreated | date: 'yyyy-MM-dd'}} </td>
-        <!-- <td>{{ TransactionItem.DateReturned | date: 'yyyy-MM-dd'}}</td> -->
-        <td class="table-button">
-          <button type="button" class="btn btn-success" (click)="setUpdate(TransactionItem)">Edit</button>
-          <button type="button" class="btn btn-danger" (click)="setDelete(TransactionItem)">Delete</button>            
-        </td>
-      </tr>          
-    </tbody>
-  </table>
-  <div class="pdf-button">
-  <input type="button" value="Download PDF" class="btn btn-success" (click)="SavePDF()">
-</div>
-</div>
+    <div class="container-table">
+      <table class="container" id="content" #content cellspacing="0">
+        <thead>
+          <tr>
+            <th scope="col">TransactionEquipID</th>
+            <th scope="col">Course ID</th>
+            <th scope="col">Consumable Name</th>
+            <th scope="col">Account ID</th>
+            <th scope="col">ID Number</th>
+            <th scope="col">Quantity</th>
+            <th scope="col">Date Created</th>
+            <th scope="col">Actions</th>
+            <!-- <th scope="col">Date Returned</th>  -->
+          </tr>
+        </thead>
+        <tbody>
+          <!-- | paginate: { itemsPerPage: itemsPerPage, currentPage: p, totalItems: ConsumableArray.length } -->
+          <tr
+            *ngFor="
+              let TransactionItem of TransactionArray
+                | paginate
+                  : {
+                      itemsPerPage: itemsPerPage,
+                      currentPage: p,
+                      totalItems: TransactionArray.length
+                    }
+            "
+          >
+            <td>{{ TransactionItem.TransactionConsumeID }}</td>
+            <td>{{ getCourseName(TransactionItem.CourseID) }}</td>
+            <td>{{ getConsumableName(TransactionItem.ConsumableID) }}</td>
+            <td>{{ getAccountName(TransactionItem.AccountID) }}</td>
+            <td>
+              {{ getAccountDetails(TransactionItem.AccountID)?.StudentNum }}
+            </td>
+            <td>{{ TransactionItem.Quantity }}</td>
+            <td>{{ TransactionItem.DateCreated | date : "yyyy-MM-dd" }}</td>
+            <!-- <td>{{ TransactionItem.DateReturned | date: 'yyyy-MM-dd'}}</td> -->
+            <td class="table-button">
+              <button
+                type="button"
+                class="btn btn-success"
+                (click)="setUpdate(TransactionItem)"
+              >
+                <mat-icon fontIcon="edit" aria-hidden="false"></mat-icon>
+                Edit
+              </button>
+              <button
+                type="button"
+                class="btn btn-danger"
+                (click)="setDelete(TransactionItem)"
+              >
+                <mat-icon fontIcon="delete" aria-hidden="false"></mat-icon>
+                Delete
+              </button>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+      <div class="table-pagination-outer">
+        <pagination-controls
+          class="table-pagination-inner"
+          (pageChange)="p = $event"
+        ></pagination-controls>
+      </div>
+    </div>
+  </div>
 </div>
