--- a/capstone-crud/src/app/course-crud/course-crud.component.css
+++ b/capstone-crud/src/app/course-crud/course-crud.component.css
@@ -1,169 +1,354 @@
-
-
+/* Start of Main Table format */
 .container-course-crud {
     width: 100%;
     height: 100%;
     margin: 0;
     padding: 0;
-    background-color: white;
+    background-color: #f3f3f3;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.185);
     font-size: 14px;
-}
-
-.mat-drawer-content {
+    font-family: "Noto Sans", sans-serif;
+  }
+  
+  .mat-drawer-content {
     height: 0;
-}
-
-.container-course-crud .container-inside {
-
+  }
+  
+  .container-course-crud .container-inside {
     display: flex;
     flex-direction: column;
     justify-content: center;
     margin-top: 20px;
     margin-bottom: 0px;
     border: 1px solid #ccc;
-}
-
-.container-course-crud .container-inside .card form{ 
-   width: 900px;
- }
-
-.container-course-crud .container-inside .card p{
+  }
+  /* End of Main Table format */
+  
+  /* Start of Main header format */
+  .container-course-crud .container-inside .card form {
+    width: 1000px;
+  }
+  
+  .header {
+    width: 100%;
+    background-color: var(--darkest-color);
+  }
+  
+  .container-course-crud .container-inside .card p {
     display: flex;
     align-items: center;
-    justify-content: center;
-    width: 100%;
-    height: 60px;
-    background-color: #363636;
+    padding: 10px;
     color: white;
-    font-size: 30px;
-    font-weight: 400;
-    margin: 0px;
- }
-
-
-.container-course-crud .container-inside .card .container-form-group {
+    font-size: 17px;
+    font-weight: 700;
+    margin: 0px 0px 0px 20px;
+  }
+  
+  p mat-icon {
+    padding-right: 10px;
+  }
+  
+  .container-course-crud .container-inside .card .container-form-group {
     display: grid;
     grid-template-columns: 250px 1fr 1fr 250px;
     margin-top: 25px;
- 
-}
-
-.container-course-crud .container-inside .card .container-form-group .form-group:nth-child(1){
+  }
+  
+  .container-course-crud
+    .container-inside
+    .card
+    .container-form-group
+    .form-group:nth-child(1) {
     grid-column-start: 2;
     margin: auto;
-   
-}
-
-.container-course-crud .container-inside .card .container-form-group .form-group:nth-child(2){
+  }
+  
+  .container-course-crud
+    .container-inside
+    .card
+    .container-form-group
+    .form-group:nth-child(2) {
     margin: auto;
-   
-}
-
-.container-course-crud .container-inside .card .container-form-group input[type=text]{
+  }
+  
+  .container-course-crud
+    .container-inside
+    .card
+    .container-form-group
+    input[type="text"] {
     padding: 10px;
-    margin-top: 7px;
-}
-
-.container-course-crud .container-inside .card .container-form-group .form-group label{ 
+    border-style: none;
+    box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.185);
+    text-align: center;
+  }
+  
+  .container-course-crud
+    .container-inside
+    .card
+    .container-form-group
+    .form-group
+    label {
     display: block;
     font-weight: 500;
     font-size: 15px;
-}
-
-.container-course-crud .container-inside .card .container-button {
-    display: grid;
-    grid-template-columns: 1fr 100px 10px 100px 1fr;
-    margin-top: 10px;
-    width: 100%;
-}
-
-.container-course-crud .container-inside .card .container-button button {
+    padding: 5px;
+    background-color: var(--normal-color);
+    text-align: center;
+    color: var(--background-color);
+  }
+  
+  .container-course-crud .container-inside .card .container-button {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .container-course-crud .container-inside .card .container-button button {
     grid-column-start: 2;
-    padding: 10px 20px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding: 7px 17px;
     border-style: none;
-    background-color: var(--graynormal-color);
-    color: white;
+    background-color: var(--normal-color);
+    font-weight: 500;
+    color: var(--background-color);
     border-radius: 4px;
     cursor: pointer;
     transition: 0.5s;
-}
-
-.container-course-crud .container-inside .card .container-button button:hover {
+    margin-top: 20px;
+  }
+  
+  .container-course-crud
+    .container-inside
+    .card
+    .container-button
+    button:nth-child(2) {
+    margin-left: 10px;
+  }
+  
+  .container-course-crud
+    .container-inside
+    .card
+    .container-button
+    button
+    mat-icon {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 17px;
+  }
+  
+  .container-course-crud .container-inside .card .container-button button:hover {
     background-color: var(--graydarkest-color);
     transform: translateY(-3px);
-}
-
-.container-course-crud .container-inside .card .container-button button:nth-child(2) {
+  }
+  
+  .container-course-crud
+    .container-inside
+    .card
+    .container-button
+    button:nth-child(2) {
     grid-column-start: 4;
-}
-
-.container-course-crud .container-inside .container-table {
-   border-spacing: 0;
-   width: 100%;
-   padding: 20px 0px;
-}
-
-.container-course-crud .container-inside .container-table table{
+  }
+  /* End of Header Table format */
+  
+  /* Start of Table format */
+  .container-course-crud .container-inside .container-table {
+    border-spacing: 0;
+    width: 100%;
+    padding: 0px 0px;
+  }
+  
+  .container-course-crud .container-inside .container-table table {
     width: 100%;
     padding: 20px;
-   
- }
-
-.container-course-crud .container-inside .container-table table th{
-  background-color: #616161;
-  color: #f3f3f3;
-  font-weight: 400;
-  padding: 10px 0px;
- }
-
-
- .container-course-crud .container-inside .container-table table td{
+    border-spacing: 0px 10px;
+  }
+  
+  .container-course-crud .container-inside .container-table table th {
+    color: var(--background-color);
+    font-weight: 500;
+    padding: 10px 10px;
+    margin: 50px 0px;
+    background-color: #660066;
+  }
+  
+  .container-course-crud .container-inside .container-table table td {
     padding: 10px 20px;
     text-align: center;
-    border-left: 1px solid #969696;
-    border-right: 1px solid #969696;
-    border-bottom: 1px solid #969696;
- }
-
- .container-course-crud .container-inside .container-table table td:hover{
+    background-color: white;
+    box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.185);
+    font-weight: 700;
+    color: #5e5e5e;
+  }
+  
+  .container-course-crud
+    .container-inside
+    .container-table
+    table
+    td:nth-child(1) {
+    font-weight: 400;
+  }
+  
+  .container-course-crud
+    .container-inside
+    .container-table
+    table
+    td:nth-child(3) {
+    font-weight: 400;
+  }
+  
+  .container-course-crud .container-inside .container-table table tr:hover {
     background-color: var(--lightest-color);
- }
-
-
-
- .container-course-crud .container-inside .container-table table td.table-button{
+  }
+  
+  /* End of Table format */
+  
+  /* Start of Table button format */
+  .container-course-crud
+    .container-inside
+    .container-table
+    table
+    td.table-button {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .container-course-crud
+    .container-inside
+    .container-table
+    table
+    td.table-button
+    button {
+    padding: 3px 10px;
+    border-style: none;
+    background-color: var(--editbutton-color);
+    color: var(--graydarkest-color);
+    border-radius: 4px;
+    transition: 0.5s;
+    cursor: pointer;
+    color: White;
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: space-evenly;
- }
-
- .container-course-crud .container-inside .container-table table td.table-button button{
-    padding: 5px 20px;
+    justify-content: center;
+  }
+  
+  .container-course-crud
+    .container-inside
+    .container-table
+    table
+    td.table-button
+    button
+    mat-icon {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 17px;
+  }
+  
+  .container-course-crud
+    .container-inside
+    .container-table
+    table
+    td.table-button
+    button:nth-child(2) {
+    background-color: var(--deletebutton-color);
     border-style: none;
-    background-color: #4b4b4b;
     color: white;
-    border-radius: 4px;
-    transition: 0.5s;
-    cursor: pointer;
- }
-
- .container-course-crud .container-inside .container-table table td.table-button button:nth-child(2){
-    background-color: red;
-    border-style: none;
-    color: white;
- }
-
- .container-course-crud .container-inside .container-table table td.table-button button:nth-child(2):hover{
+    margin-left: 5px;
+  }
+  
+  .container-course-crud
+    .container-inside
+    .container-table
+    table
+    td.table-button
+    button:nth-child(2):hover {
     background-color: var(--reddarkest-color);
- }
-
- .container-course-crud .container-inside .container-table table td.table-button button:hover{
+  }
+  
+  .container-course-crud
+    .container-inside
+    .container-table
+    table
+    td.table-button
+    button:hover {
     transform: translateY(-3px);
-    background-color: var(--graydarkest-color);
- }
-
-
- .container-course-crud .container-inside .container-table tr:nth-child(even) {background: #e9e9e9}
- .container-course-crud .container-inside .container-table tr:nth-child(odd) {background: #FFF}
+    background-color: var(--editbuttonh-color);
+  }
+  /* End of Table button format */
+  
+  /* Start of Pagination format */
+  .table-pagination-outer {
+    display: grid;
+    grid-template-columns: 1fr 280px;
+    margin: 0px 20px 20px 20px;
+    margin-top: -20px;
+    background: var(--darkest-color);
+    height: 35px;
+  }
+  
+  .table-pagination-inner {
+    grid-column: 2;
+    height: 40px;
+    margin-top: -9px;
+  }
+  
+  .table-pagination-inner ::ng-deep .ngx-pagination .current {
+    background: white;
+    color: var(--graydarkest-color);
+  }
+  
+  .table-pagination-inner ::ng-deep .ngx-pagination a {
+    color: #ccc;
+  }
+  
+  .table-pagination-inner ::ng-deep .ngx-pagination a:hover {
+    color: var(--graydarkest-color);
+  }
+  /* End of Pagination format */
+  .loader-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(
+      119,
+      119,
+      119,
+      0.6
+    ); /* Adjust the background color and opacity */
+    z-index: -0;
+    margin-top: 120px;
+    margin-left: 100px;
+  }
+  
+  .loader {
+    border: 8px solid #f3f3f3;
+    border-top: 8px solid var(--normal-color); /* Loader color */
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    animation: spin 1s linear infinite;
+    margin-top: -300px;
+    margin-left: -90px;
+  }
+  
+  @keyframes spin {
+    0% {
+      transform: rotate(0deg);
+    }
+    100% {
+      transform: rotate(360deg);
+    }
+  }
