--- a/capstone-crud/src/app/equipment-crud/equipment-crud.component.html
+++ b/capstone-crud/src/app/equipment-crud/equipment-crud.component.html
@@ -1,78 +1,158 @@
 <div class="container-equipment-crud">
-  <div class="container-inside" >
-      <div class="card">
-              <p>Equipment</p>
-      
+  <div class="container-inside">
+    <div class="card">
+      <div class="header">
+        <p>
+          <mat-icon fontIcon="devices" aria-hidden="false"> </mat-icon>Equipment
+        </p>
+      </div>
+      <div class="loader-container" *ngIf="!isResultLoaded">
+        <div class="loader"></div>
+      </div>
       <form>
-          <div class="container-form-group">
+        <div class="container-form-group">
           <div class="form-group">
-            <label>Equipment Name</label>
-            <input type="text" [(ngModel)]="EquipmentName" [ngModelOptions]="{standalone: true}" class="form-control" id="EquipmentName" placeholder="Equipment Name">
-          </div>
-      
-          <div class="form-group">
-            <label>Quantity </label>
-            <input type="text" [(ngModel)]="Quantity" [ngModelOptions]="{standalone: true}" class="form-control" id="Quantity" placeholder="Quantity">
-          </div>
-          <div class="form-group">
-            <label>Course: </label>
             <div class="custom-select">
-            <select [(ngModel)]="CourseID" class="form-control" [ngModelOptions]="{standalone: true}">
-              <option  *ngFor="let CourseItem of CourseArray"  [value]="CourseItem.CourseID">{{ CourseItem.CourseName }}</option>
-            </select>
-          </div>
-          </div>
-  
-          <div class="form-group">
-              <label>Calibration Schedule</label>
-              <input type="date" [(ngModel)]="CalibrationSchedule" [ngModelOptions]="{standalone: true}" [min]="minDate" class="form-control" id="CalibrationSchedule" placeholder="DD-MM-YYYY">
+              <label>Course: </label>
+
+              <select
+                [(ngModel)]="CourseID"
+                class="form-control"
+                [ngModelOptions]="{ standalone: true }"
+              >
+                <option
+                  *ngFor="let CourseItem of CourseArray"
+                  [value]="CourseItem.CourseID"
+                  class="select-option"
+                >
+                  {{ CourseItem.CourseName }}
+                </option>
+              </select>
             </div>
           </div>
-  
-          <div class="container-button">
-            <button type="button" class="btn btn-danger" (click)="register()">Add</button>
-            <button type="submit" class="btn btn-primary mt-4" (click)="save()" >Save</button>
+          <div class="form-group">
+            <label>Equipment Name</label>
+            <input
+              type="text"
+              [(ngModel)]="EquipmentName"
+              [ngModelOptions]="{ standalone: true }"
+              class="form-control"
+              id="EquipmentName"
+              placeholder="Equipment Name"
+            />
+          </div>
+
+          <div class="form-group">
+            <label>Quantity </label>
+            <input
+              type="text"
+              [(ngModel)]="Quantity"
+              [ngModelOptions]="{ standalone: true }"
+              class="form-control"
+              id="Quantity"
+              placeholder="Quantity"
+            />
+          </div>
+
+          <div class="form-group">
+            <label>Calibration Schedule</label>
+            <input
+              type="date"
+              [(ngModel)]="CalibrationSchedule"
+              [ngModelOptions]="{ standalone: true }"
+              [min]="minDate"
+              class="form-control"
+              id="CalibrationSchedule"
+              placeholder="DD-MM-YYYY"
+            />
+          </div>
         </div>
-        
+
+        <div class="container-button">
+          <button type="button" class="btn btn-danger" (click)="register()">
+            <mat-icon fontIcon="add" aria-hidden="false"></mat-icon>
+            Add
+          </button>
+          <button type="submit" class="btn btn-primary mt-4" (click)="save()">
+            <mat-icon fontIcon="save" aria-hidden="false"></mat-icon>
+            Save
+          </button>
+        </div>
+
         <div class="container-filter">
-          <select [(ngModel)]="SelectedCourseID" [ngModelOptions] = "{standalone: true}">
-            <option *ngFor="let course of CourseArray" [value]="course.CourseID">{{ course.CourseName }}</option>
+          <select
+            [(ngModel)]="SelectedCourseID"
+            [ngModelOptions]="{ standalone: true }"
+          >
+            <option
+              *ngFor="let course of CourseArray"
+              [value]="course.CourseID"
+            >
+              {{ course.CourseName }}
+            </option>
           </select>
           <button (click)="filterEquipments()">Filter</button>
+          <button (click)="clearFilter()">Clear</button>
         </div>
-         
-        </form>
+      </form>
+    </div>
+
+    <div class="container-table">
+      <table cellspacing="0">
+        <thead>
+          <tr>
+            <th scope="col">ID</th>
+            <th scope="col">Equipment Name</th>
+            <th scope="col">Quantity</th>
+            <th scope="col">Calibration Schedule</th>
+            <th scope="col">Actions</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr
+            *ngFor="
+              let EquipmentItem of EquipmentArray
+                | paginate
+                  : {
+                      itemsPerPage: itemsPerPage,
+                      currentPage: p,
+                      totalItems: EquipmentArray.length
+                    }
+            "
+          >
+            <td>{{ EquipmentItem.EquipmentID }}</td>
+            <td>{{ EquipmentItem.EquipmentName }}</td>
+            <td>{{ EquipmentItem.Quantity }}</td>
+            <td>
+              {{ EquipmentItem.CalibrationSchedule | date : "yyyy-MM-dd" }}
+            </td>
+            <td class="table-button">
+              <button
+                type="button"
+                class="btn btn-success"
+                (click)="setUpdate(EquipmentItem)"
+              >
+                <mat-icon fontIcon="edit" aria-hidden="false"> </mat-icon>
+                Edit
+              </button>
+              <button
+                type="button"
+                class="btn btn-danger"
+                (click)="setDelete(EquipmentItem)"
+              >
+                <mat-icon fontIcon="delete" aria-hidden="false"> </mat-icon>
+                Delete
+              </button>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+      <div class="table-pagination-outer">
+        <pagination-controls
+          class="table-pagination-inner"
+          (pageChange)="p = $event"
+        ></pagination-controls>
       </div>
-      
-    
-     
-          <div class="container-table">
-          <table cellspacing="0">
-              <thead>
-               <h1 *ngIf="!isResultLoaded">Loading.................</h1>      
-              <tr>
-                  <th scope="col">ID</th>
-                  <th scope="col">Equipment Name</th>
-                  <th scope="col">Quantity</th>   
-                  <th scope="col">Calibration Schedule</th> 
-                  <th scope="col">Actions</th>  
-                </tr>
-              </thead>
-              <tbody>
-                  <tr *ngFor="let EquipmentItem of EquipmentArray | paginate: { itemsPerPage: itemsPerPage, currentPage: p, totalItems: EquipmentArray.length }">
-                  <td>{{ EquipmentItem.EquipmentID }}</td>
-                  <td>{{ EquipmentItem.EquipmentName }}</td>
-                  <td>{{ EquipmentItem.Quantity }}</td>
-                  <td>{{ EquipmentItem.CalibrationSchedule | date: 'yyyy-MM-dd' }}</td>
-                  <td class="table-button">
-                    <button type="button" class="btn btn-success" (click)="setUpdate(EquipmentItem)">Edit</button>
-                    <button type="button" class="btn btn-danger" (click)="setDelete(EquipmentItem)">Delete</button>            
-                  </td>
-                </tr>          
-              </tbody>
-            </table>
-            <div class="table-pagination-outer">
-            <pagination-controls class="table-pagination-inner" (pageChange)="p = $event"></pagination-controls>
-          </div>
-          </div>
-        </div>
+    </div>
+  </div>
+</div>
