--- a/capstone-crud/src/app/facility-crud/facility-crud.component.html
+++ b/capstone-crud/src/app/facility-crud/facility-crud.component.html
@@ -1,54 +1,119 @@
-<div class="container" >
+<div class="container-facility-crud">
+  <div class="container-inside">
     <div class="card">
-            <h1>Facilities</h1>
-    
-    <form>
-        <div class="form-group">
-          <label>Room Name</label>
-          <input type="text" [(ngModel)]="RoomName" [ngModelOptions]="{standalone: true}" class="form-control" id="RoomName" placeholder="Room Name">
-        </div>
-    
-        <div class="form-group">
-          <label>Room Description </label>
-          <input type="text" [(ngModel)]="RoomDesc" [ngModelOptions]="{standalone: true}" class="form-control" id="RoomDesc" placeholder="Room Description">
+      <div class="header">
+        <p>
+          <mat-icon fontIcon="business" aria-hidden="false"> </mat-icon
+          >Facilities
+        </p>
+      </div>
+      <div class="loader-container" *ngIf="!isResultLoaded">
+        <div class="loader"></div>
+      </div>
+      <form>
+        <div class="container-form-group">
+          <div class="form-group">
+            <label>Room Name</label>
+            <input
+              type="text"
+              [(ngModel)]="RoomName"
+              [ngModelOptions]="{ standalone: true }"
+              class="form-control"
+              id="RoomName"
+              placeholder="Room Name"
+            />
+          </div>
+
+          <div class="form-group">
+            <label>Room Description </label>
+            <input
+              type="text"
+              [(ngModel)]="RoomDesc"
+              [ngModelOptions]="{ standalone: true }"
+              class="form-control"
+              id="RoomDesc"
+              placeholder="Room Description"
+            />
+          </div>
         </div>
 
-        <button type="submit" class="btn btn-primary mt-4" (click)="save()" >Save</button>
-        <button type="button" class="btn btn-danger" (click)="addRooms()">Add</button>
-        
+        <div class="container-button">
+          <button type="button" class="btn btn-danger" (click)="addRooms()">
+            <mat-icon fontIcon="add" aria-hidden="false"> </mat-icon>
+            Add
+          </button>
+          <button type="submit" class="btn btn-primary mt-4" (click)="save()">
+            <mat-icon fontIcon="save" aria-hidden="false"> </mat-icon>
+            Save
+          </button>
+        </div>
       </form>
     </div>
-    
-  
-    
-        <div>
-        <table>
-            <thead>
-             <h1 *ngIf="!isResultLoaded">Loading.................</h1>      
-            <tr>
-                <th scope="col">Room ID</th>
-                <th scope="col">Room</th>
-                <th scope="col">Room Description</th>   
-                <th scope="col">Room Status</th>  
-              </tr>
-            </thead>
-            <tbody>
-                <!-- | paginate: { itemsPerPage: itemsPerPage, currentPage: p, totalItems: EquipmentArray.length } -->
-                <tr *ngFor="let RoomItem of RoomsArray">
-                <td>{{ RoomItem.RoomID }}</td>
-                <td>{{ RoomItem.RoomName }}</td>
-                <td>{{ RoomItem.RoomDesc }}</td>
-                <td>
-                    <button type="button" (click)="toggleActive(RoomItem)">
-                      {{ RoomItem.RoomStatus ? 'Active' : 'Inactive' }}
-                    </button>
-                  </td>
-                <td>
-                  <button type="button" class="btn btn-success" (click)="setUpdate(RoomItem)">Edit</button>
-                  <button type="button" class="btn btn-danger" (click)="deleteRoom(RoomItem)">Delete</button>            
-                </td>
-              </tr>          
-            </tbody>
-          </table>
-          <!-- <pagination-controls (pageChange)="p = $event"></pagination-controls> -->
-        </div>
+
+    <div class="container-table">
+      <table cellspacing="0">
+        <thead>
+          <tr>
+            <th scope="col">Room ID</th>
+            <th scope="col">Room</th>
+            <th scope="col">Room Description</th>
+            <th scope="col">Room Status</th>
+            <th scope="col">Actions</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr
+            *ngFor="
+              let RoomItem of RoomsArray
+                | paginate
+                  : {
+                      itemsPerPage: itemsPerPage,
+                      currentPage: p,
+                      totalItems: FacilityArray.length
+                    }
+            "
+          >
+            <td>{{ RoomItem.RoomID }}</td>
+            <td>{{ RoomItem.RoomName }}</td>
+            <td>{{ RoomItem.RoomDesc }}</td>
+            <td>
+              <button
+                class="active-button"
+                type="button"
+                (click)="toggleActive(RoomItem)"
+                [class.active]="RoomItem.RoomStatus === 1"
+                [class.inactive]="RoomItem.RoomStatus === 0"
+              >
+                {{ RoomItem.RoomStatus ? "Available" : "In Use" }}
+              </button>
+            </td>
+            <td class="table-button">
+              <button
+                type="button"
+                class="btn btn-success"
+                (click)="setUpdate(RoomItem)"
+              >
+                <mat-icon fontIcon="edit" aria-hidden="false"> </mat-icon>
+                Edit
+              </button>
+              <button
+                type="button"
+                class="btn btn-danger"
+                (click)="deleteRoom(RoomItem)"
+              >
+                <mat-icon fontIcon="delete" aria-hidden="false"> </mat-icon>
+                Delete
+              </button>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+      <div class="table-pagination-outer">
+        <pagination-controls
+          class="table-pagination-inner"
+          (pageChange)="p = $event"
+        ></pagination-controls>
+      </div>
+    </div>
+  </div>
+</div>
