--- a/capstone-crud/src/app/manage-users/manage-users.component.html
+++ b/capstone-crud/src/app/manage-users/manage-users.component.html
@@ -1,38 +1,82 @@
-<div>
-  <table *ngIf="isResultLoaded">
-    <thead>
-      <tr>
-        <th scope="col">Last Name</th>
-        <th scope="col">First Name</th>
-        <th scope="col">Student Number</th>
-        <th scope="col">User Name</th>
-        <th scope="col">Password</th>
-        <th scope="col">Access Level</th>
-        <th scope="col">isActive</th>
-        <th scope="col">Actions</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr *ngFor="let user of users">
-        <td>{{ user.LastName }}</td>
-        <td>{{ user.FirstName }}</td>
-        <td>{{ user.StudentNum }}</td>
-        <td>{{ user.UserName }}</td>
-        <td>{{ user.Password }}</td>
-        <td>
-          <select [(ngModel)]="user.AccessLevelID" (change)="updateAccessLevel(user)">
-            <option *ngFor="let AccessItem of AccessLevels" [value]="AccessItem.AccessLevelID">{{ AccessItem.AccessName }}</option>
-          </select>
-        </td>
-        <td>
-          <button type="button" (click)="toggleActive(user)">{{ user.isActive ? 'Active' : 'Inactive' }}</button>
-        </td>
-        <td>
-          <button type="button" (click)="setUpdate(user)">Edit</button>
-          <button type="button" (click)="deleteUser(user)">Delete</button>
-        </td>
-      </tr>
-    </tbody>
-  </table>
-  <h1 *ngIf="!isResultLoaded">Loading.................</h1>
+<div class="container-manage-users">
+  <div class="container-inside">
+    <div class="card">
+      <form>
+        <div class="header">
+          <p>
+            <mat-icon fontIcon="manage_accounts" aria-hidden="false"> </mat-icon
+            >Users
+          </p>
+        </div>
+        <div class="loader-container" *ngIf="!isResultLoaded">
+          <div class="loader"></div>
+        </div>
+      </form>
+    </div>
+
+    <div class="container-table">
+      <table cellspacing="0">
+        <thead>
+          <tr>
+            <th scope="col">Last Name</th>
+            <th scope="col">First Name</th>
+            <th scope="col">Student Number</th>
+            <th scope="col">User Name</th>
+            <th scope="col">Password</th>
+            <th scope="col">Access Level</th>
+            <th scope="col">isActive</th>
+            <th scope="col">Actions</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let user of users">
+            <td>{{ user.LastName }}</td>
+            <td>{{ user.FirstName }}</td>
+            <td>{{ user.StudentNum }}</td>
+            <td>{{ user.UserName }}</td>
+            <td>{{ user.Password }}</td>
+            <td>
+              <select
+                [(ngModel)]="user.AccessLevelID"
+                (change)="updateAccessLevel(user)"
+              >
+                <option
+                  *ngFor="let AccessItem of AccessLevels"
+                  [value]="AccessItem.AccessLevelID"
+                >
+                  {{ AccessItem.AccessName }}
+                </option>
+              </select>
+            </td>
+
+            <td>
+              <button
+                type="button"
+                (click)="toggleActive(user)"
+                [class.active]="user.isActive === 1"
+                [class.inactive]="user.isActive === 0"
+              >
+                {{ user.isActive ? "Active" : "Inactive" }}
+              </button>
+            </td>
+            <td class="table-button">
+              <button type="button" (click)="setUpdate(user)">
+                <mat-icon fontIcon="edit" aria-hidden="false"></mat-icon>Edit
+              </button>
+              <button type="button" (click)="deleteUser(user)">
+                <mat-icon fontIcon="delete" aria-hidden="false"></mat-icon
+                >Delete
+              </button>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+      <div class="table-pagination-outer">
+        <pagination-controls
+          class="table-pagination-inner"
+          (pageChange)="p = $event"
+        ></pagination-controls>
+      </div>
+    </div>
+  </div>
 </div>
