--- a/capstone-crud/src/app/terms-and-conditons/terms-and-conditons.component.css
+++ b/capstone-crud/src/app/terms-and-conditons/terms-and-conditons.component.css
@@ -1,172 +1,143 @@
-.main-body{
+.main-body {
   background: url("/assets/mainbg.jpg");
   background-position: center;
-  background-repeat: no-repeat; 
-  background-size: cover; 
+  background-repeat: no-repeat;
+  background-size: cover;
   height: 100%;
   display: flex;
   max-width: 100%;
+  font-family: "Noto Sans", sans-serif;
 }
 
-
+.main-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: auto;
+  margin-top: -10px;
+}
 
 .container {
-    background-color: var(--background-color);
-    border-radius: 8px;
-    box-shadow: 0 0 50px rgba(245, 245, 245, 0.37);
-    width: 80%;
-    margin: auto;
-    margin-top: 50px;
-    display: grid;
-    opacity: 0.9;
-  }
-
-  .section-header {
-    background-color: var(--graylightest-color);
-    color: var(--background-color);
-    text-align: center;
-  }
-  
-  .section-divider {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    margin-top: 30px;
-  }
-
-  .section1-content {
-    padding-left: 20px;
-    display: flex;
-    flex-direction: column;
-  }
-
-  .section2-content {
-    padding-left: 50px;
-    padding-right: 20px;
-    display: flex;
-    flex-direction: column;
-  }
-
-
-
-  h1{
-    text-align: center;
-    font-weight: 500;
-  }
-
- h4 {
-    background-color: var(--graylightest-color);
-    color: var(--background-color);
-    padding: 4px;
-    font-weight: 500;
-    text-align: center;
-  }
-  
-  .section {
-    margin-bottom: 25px;
-
-  }
-
-
-
-  .section p{
-    margin: -15px 0px;
-    padding: 0;
-    text-align: center;
-  }
-
-  .button-container {
-    margin: auto;
-    margin-top: 30px;
-    padding-bottom: 30px;
-  }
-  
-  .copyright {
-    text-align: center;
-    color: var(--background-color);
-    background-color: var(--graylightest-color);
-    padding: 20px;
-    border-radius: 0px 0px 8px 8px;
-  }
-  
-  .copyright p {
-    margin: 0;
-    font-size: 14px;
-  }
-
- .container-button a {
-    text-decoration: none;
-  }
-
-  button {
-    width: 100%; /* Make the button 50% of the container width */
-    padding: 14px;
-    padding-right: 20px;
-    background-color: #993399; /* Green color, adjust as needed */
-    color: white;
-    border: none;
-    border-radius: 5px; /* Make the border radius 50% for a pill shape */
-    cursor: pointer;
-    transition: background-color 0.3s;
-    display: grid; /* Make the button a block-level element */
-    grid-template-columns: 1fr 30px;
-    font-size: 15px;
-    justify-content: center;
-    align-items: center;
+  background-color: #f3f3f3ee;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(245, 245, 245, 0.192);
+  width: 50%;
+  margin: auto;
+  margin-top: 50px;
+  display: grid;
 }
 
-button:hover {
-    background-color: #660066; /* Darker green color on hover, adjust as needed */
+.section-header {
+  text-align: center;
 }
 
-a {
-    color: white;
-    text-decoration: none;
-    width: 100%;
-    display: flex;
-    flex-direction: row;
+.section-header h1 {
+  font-weight: 900;
 }
-  
- button[type=button] mat-icon{
-    margin-left: 10px;
-    font-size: 27px;
-    width: 100%;
-    height: 100%;
-    align-items: center;
-    justify-items: center;
-  }
 
-  .section-email {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  
+#lab {
+  margin: 0;
+  padding: 0;
+  margin-top: 30px;
+  font-size: 50px;
+}
 
-  .emails {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 20px 20px;
-    margin-top: -17px;
-  }
+#solutions {
+  margin: 0;
+  padding: 0;
+  margin-top: -15px;
+  font-size: 20px;
+}
 
-  .emails p{
-    text-align: center;
-  }
+h1.tac {
+  padding: 0px 50px;
+  margin: 0;
+  padding-top: 30px;
+}
 
+hr {
+  content: "";
+  width: 90%;
+  padding: 1px;
+  background-color: black;
+}
 
-  .emails p:nth-child(2){
-    grid-column: 2;
-    grid-row: 1;
-  }
+.section-header {
+  text-align: center;
+}
 
-  .emails p:nth-child(3){
-    grid-column: 1;
-    grid-row: 2;
-  }
+.section-holder {
+  overflow-y: scroll;
+  height: 500px;
+  width: 90%;
+  margin: auto;
+}
 
-  .emails p:nth-child(4){
-    grid-column: 2;
-    grid-row: 2;
-  }
+.section-holder .section h4 {
+  font-weight: 800;
+  margin-bottom: 0px;
+}
 
-  
+.section-holder .section p {
+  margin-top: 0px;
+  font-size: 13px;
+}
+
+.emails {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+  width: 70%;
+}
+
+.emails p {
+  font-size: 13px;
+  margin-top: 0;
+}
+
+.button-container {
+  padding: 30px 35px 20px 20px;
+  display: grid;
+  grid-template-columns: 1fr 120px;
+}
+
+.button-container a {
+  text-decoration: none;
+  margin-right: 5px;
+  grid-column: 2;
+}
+
+.button-container a button {
+  background-color: var(--normal-color);
+  border-style: none;
+  border-radius: 4px;
+  padding: 5px 10px;
+  display: flex;
+  text-decoration: none;
+  justify-content: center;
+  align-items: center;
+  font-size: 15px;
+  cursor: pointer;
+  font-weight: 500;
+  color: white;
+  transition: 0.5s;
+}
+
+.button-container a button:hover {
+  background-color: var(--darkest-color);
+}
+
+.button-container a button mat-icon {
+  padding-left: 10px;
+}
+
+.copyright {
+  background-color: var(--darkest-color);
+  width: 100%;
+}
+
+.copyright p {
+  text-align: center;
+  font-size: 13px;
+  color: white;
+}
