--- a/capstone-crud/src/app/profile/profile.component.html
+++ b/capstone-crud/src/app/profile/profile.component.html
@@ -46,7 +46,7 @@
     <div *ngIf="isEditMode">
       <input type="text" [(ngModel)]="LastName"><br>
       <input type="text" [(ngModel)]="FirstName"><br>
-      <input type="text" [(ngModel)]="Birthdate"><br>
+      <input type="date" [(ngModel)]="Birthdate"><br>
       <input type="text" [(ngModel)]="StudentNum"><br>
       <input type="text" [(ngModel)]="UserName"><br>
       <input type="text" [(ngModel)]="Password"><br>
