--- a/capstone-crud/src/app/menu/menu.component.css
+++ b/capstone-crud/src/app/menu/menu.component.css
@@ -136,10 +136,7 @@ mat-icon {
 
 .sidenav-container .itemlink:hover {
   background-color: #e2bce2;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+
 }
 
 .sidenav-container .list-last-main {
@@ -186,5 +183,15 @@ mat-icon {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+.mdc-list-item {
+  display: flex;
+  /* position: relative; */
+  align-items: center;
+  /* justify-content: space-between; */
+  /* overflow: hidden; */
+  padding: 40px 8px;
+  /* align-items: stretch; */
+  cursor: pointer;
 }
 /* ------------- */
