--- a/capstone-crud/src/app/course-crud/course-crud.component.html
+++ b/capstone-crud/src/app/course-crud/course-crud.component.html
@@ -9,7 +9,13 @@
       </div>
       <!-- Loader -->
       <div class="loader-container" *ngIf="!isResultLoaded">
-        <div class="loader"></div>
+        <div class="loader">
+          <label
+            >Sorry, we're having trouble loading the database. Try reloading the
+            page.</label
+          >
+          <div class="loading"></div>
+        </div>
       </div>
       <form>
         <div class="container-form-group">
