--- a/capstone-crud/src/app/facility-crud/facility-crud.component.html
+++ b/capstone-crud/src/app/facility-crud/facility-crud.component.html
@@ -7,8 +7,15 @@
           >Facilities
         </p>
       </div>
+      <!-- Loader -->
       <div class="loader-container" *ngIf="!isResultLoaded">
-        <div class="loader"></div>
+        <div class="loader">
+          <label
+            >Sorry, we're having trouble loading the database. Try reloading the
+            page.</label
+          >
+          <div class="loading"></div>
+        </div>
       </div>
       <form>
         <div class="container-form-group">
@@ -38,7 +45,7 @@
         </div>
 
         <div class="container-button">
-          <button type="submit" class="btn btn-danger" (click)="addRooms()">
+          <button type="button" class="btn btn-danger" (click)="addRooms()">
             <mat-icon fontIcon="add" aria-hidden="false"> </mat-icon>
             Add
           </button>
