--- a/capstone-crud/src/app/manage-users/manage-users.component.html
+++ b/capstone-crud/src/app/manage-users/manage-users.component.html
@@ -4,15 +4,28 @@
       <form>
         <div class="header">
           <p>
-            <mat-icon fontIcon="manage_accounts" aria-hidden="false"> </mat-icon>
+            <mat-icon fontIcon="manage_accounts" aria-hidden="false">
+            </mat-icon>
             Users
           </p>
         </div>
+
+        <!-- Loader -->
         <div class="loader-container" *ngIf="!isResultLoaded">
-          <div class="loader"></div>
+          <div class="loader">
+            <label
+              >Sorry, we're having trouble loading the database. Try reloading
+              the page.</label
+            >
+            <div class="loading"></div>
+          </div>
         </div>
       </form>
     </div>
+    <input type="text" [(ngModel)]="searchStudentNum" placeholder="Search by Student Number" />
+    <button type="button" (click)="searchUserByStudentNum()">Search</button>
+    <button type="button" (click)="clearSearch()">Clear Search</button>
+
 
     <div class="container-table">
       <table cellspacing="0">
@@ -29,7 +42,9 @@
           </tr>
         </thead>
         <tbody>
-          <tr *ngFor="let user of users">
+          <tr
+            *ngFor="let user of (filteredUsers.length > 0 ? filteredUsers : users) | paginate: { itemsPerPage: itemsPerPage, currentPage: p, totalItems: filteredUsers.length > 0 ? filteredUsers.length : users.length }"
+          >
             <td>
               <input type="text" [(ngModel)]="user.LastName" />
             </td>
@@ -46,34 +61,46 @@
               <input type="text" [(ngModel)]="user.Password" />
             </td>
             <td>
-              <select [(ngModel)]="user.AccessLevelID" (change)="updateAccessLevel(user)">
-                <option *ngFor="let AccessItem of AccessLevels" [value]="AccessItem.AccessLevelID">
+              <select
+                [(ngModel)]="user.AccessLevelID"
+                (change)="updateAccessLevel(user)"
+              >
+                <option
+                  *ngFor="let AccessItem of AccessLevels"
+                  [value]="AccessItem.AccessLevelID"
+                >
                   {{ AccessItem.AccessName }}
                 </option>
               </select>
             </td>
             <td>
-              <button type="button" (click)="toggleActive(user)" [class.active]="user.isActive === 1"
-                [class.inactive]="user.isActive === 0">
+              <button
+                type="button"
+                (click)="toggleActive(user)"
+                [class.active]="user.isActive === 1"
+                [class.inactive]="user.isActive === 0"
+              >
                 {{ user.isActive ? "Active" : "Inactive" }}
               </button>
             </td>
-            <td>
-              <button type="button" (click)="save(user)">Save</button>
-            </td>
+
             <td class="table-button">
-              <button type="button" (click)="setUpdate(user)">
-                <mat-icon fontIcon="edit" aria-hidden="false"></mat-icon>Edit
+              <button type="button" (click)="save(user)">
+                <mat-icon fontIcon="save" aria-hidden="false"></mat-icon>Save
               </button>
               <button type="button" (click)="deleteUser(user)">
-                <mat-icon fontIcon="delete" aria-hidden="false"></mat-icon>Delete
+                <mat-icon fontIcon="delete" aria-hidden="false"></mat-icon
+                >Delete
               </button>
             </td>
           </tr>
         </tbody>
       </table>
       <div class="table-pagination-outer">
-        <pagination-controls class="table-pagination-inner" (pageChange)="p = $event"></pagination-controls>
+        <pagination-controls
+          class="table-pagination-inner"
+          (pageChange)="p = $event"
+        ></pagination-controls>
       </div>
     </div>
   </div>
