--- a/capstone-crud/src/app/user-consumable/user-consumable.component.html
+++ b/capstone-crud/src/app/user-consumable/user-consumable.component.html
@@ -1,44 +1,77 @@
 <div class="container-consumable">
   <div class="container-inside">
-      <div class="card">
+    <div class="card">
+      <div class="header">
         <p>Consumables</p>
-    
-          <div class="container-filter">
-            <select [(ngModel)]="SelectedCourseID" [ngModelOptions] = "{standalone: true}">
-              <option *ngFor="let course of CourseArray" [value]="course.CourseID">{{ course.CourseName }}</option>
-            </select>
-            <button (click)="filterConsumables()">Filter</button>
-          </div>
-  
-          <div class="container-table">
-          <table cellspacing="0">
-            <thead>
-              <h1 *ngIf="!isResultLoaded">Loading.................</h1>
-              <tr>
-                <!-- <th scope="col">ID</th> -->
-                <th scope="col">Consumable Name</th>
-                <th scope="col">Quantity</th>
-                <th>Status</th>
-                <!-- <th scope="col">Expiration Date</th> -->
-              </tr>
-            </thead>
-            <tbody>
-              <tr *ngFor="let ConsumableItem of ConsumableArray | paginate: { itemsPerPage: itemsPerPage, currentPage: p, totalItems: ConsumableArray.length }">
-                <!-- <td>{{ ConsumableItem.ConsumableID }}</td> -->
-                <td>{{ ConsumableItem.ConsumableName }}</td>
-                <td>{{ ConsumableItem.Quantity }}</td>
-                <td>{{ getStatusClass(ConsumableItem.Quantity) }}</td>
-                <!-- <td>{{ ConsumableItem.ExpirationDate }}</td> -->
-                <!-- <td> -->
-                  <!-- Remove Edit and Delete buttons -->
-                <!-- </td> -->
-              </tr>
-            </tbody>
-          </table>
-          <div class="table-pagination-outer">
-            <pagination-controls class="table-pagination-inner" (pageChange)="p = $event"></pagination-controls>
-          </div>
+      </div>
+
+      <!-- Loader -->
+      <div class="loader-container" *ngIf="!isResultLoaded">
+        <div class="loader">
+          <label
+            >Sorry, we're having trouble loading the database. Try reloading the
+            page.</label
+          >
+          <div class="loading"></div>
+        </div>
+      </div>
+      <form></form>
+      <div class="container-filter">
+        <select
+          [(ngModel)]="SelectedCourseID"
+          [ngModelOptions]="{ standalone: true }"
+        >
+          <option *ngFor="let course of CourseArray" [value]="course.CourseID">
+            {{ course.CourseName }}
+          </option>
+        </select>
+        <button (click)="filterConsumables()">Filter</button>
+        <button (click)="clearFilter()">Clear</button>
+      </div>
+
+      <div class="container-table">
+        <table cellspacing="0">
+          <thead>
+            <tr>
+              <th scope="col">Consumable Name</th>
+              <th scope="col">Quantity</th>
+              <th>Status</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr
+              *ngFor="
+                let ConsumableItem of ConsumableArray
+                  | paginate
+                    : {
+                        itemsPerPage: itemsPerPage,
+                        currentPage: p,
+                        totalItems: ConsumableArray.length
+                      }
+              "
+            >
+              <td>{{ ConsumableItem.ConsumableName }}</td>
+              <td>{{ ConsumableItem.Quantity }}</td>
+              <td>
+                <div
+                  class="stocks-main"
+                  [ngClass]="getStatusClass(ConsumableItem.Quantity)"
+                >
+                  <div class="stocks">
+                    {{ getStatusString(ConsumableItem.Quantity) }}
+                  </div>
+                </div>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+        <div class="table-pagination-outer">
+          <pagination-controls
+            class="table-pagination-inner"
+            (pageChange)="p = $event"
+          ></pagination-controls>
         </div>
       </div>
     </div>
   </div>
+</div>
