--- a/capstone-crud/src/app/user-equipment/user-equipment.component.html
+++ b/capstone-crud/src/app/user-equipment/user-equipment.component.html
@@ -1,43 +1,69 @@
 <div class="container-equipment">
   <div class="container-inside">
-      <div class="card">
+    <div class="card">
+      <div class="header">
         <p>Equipment</p>
-    
-        <form>
-    
-          <div class="container-filter">
-            <select [(ngModel)]="SelectedCourseID" [ngModelOptions]="{standalone: true}">
-              <option *ngFor="let course of CourseArray" [value]="course.CourseID">{{ course.CourseName }}</option>
-            </select>
-            <button (click)="filterEquipments()">Filter</button>
-          </div>
-        </form>
       </div>
-    
-      <div class="container-table">
-        <table cellspacing="0">
-          <thead>
-            <h1 *ngIf="!isResultLoaded">Loading.................</h1>
-            <tr>
-              <!-- <th scope="col">ID</th> -->
-              <th scope="col">Equipment Name</th>
-              <th scope="col">Quantity</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr *ngFor="let EquipmentItem of EquipmentArray | paginate: { itemsPerPage: itemsPerPage, currentPage: p, totalItems: EquipmentArray.length }">
-              <!-- <td>{{ EquipmentItem.EquipmentID }}</td> -->
-              <td>{{ EquipmentItem.EquipmentName }}</td>
-              <td>{{ EquipmentItem.Quantity }}</td>
-              <!-- <td> -->
-                <!-- Remove Edit and Delete buttons -->
-              <!-- </td> -->
-            </tr>
-          </tbody>
-        </table>
-        <div class="table-pagination-outer">
-        <pagination-controls class="table-pagination-inner" (pageChange)="p = $event"></pagination-controls>
+      <!-- Loader -->
+      <div class="loader-container" *ngIf="!isResultLoaded">
+        <div class="loader">
+          <label
+            >Sorry, we're having trouble loading the database. Try reloading the
+            page.</label
+          >
+          <div class="loading"></div>
+        </div>
       </div>
+      <form>
+        <div class="container-filter">
+          <select
+            [(ngModel)]="SelectedCourseID"
+            [ngModelOptions]="{ standalone: true }"
+          >
+            <option
+              *ngFor="let course of CourseArray"
+              [value]="course.CourseID"
+            >
+              {{ course.CourseName }}
+            </option>
+          </select>
+          <button (click)="filterEquipments()">Filter</button>
+          <button (click)="clearFilter()">Clear</button>
+        </div>
+      </form>
+    </div>
+
+    <div class="container-table">
+      <table cellspacing="0">
+        <thead>
+          <tr>
+            <th scope="col">Equipment Name</th>
+            <th scope="col">Quantity</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr
+            *ngFor="
+              let EquipmentItem of EquipmentArray
+                | paginate
+                  : {
+                      itemsPerPage: itemsPerPage,
+                      currentPage: p,
+                      totalItems: EquipmentArray.length
+                    }
+            "
+          >
+            <td>{{ EquipmentItem.EquipmentName }}</td>
+            <td>{{ EquipmentItem.Quantity }}</td>
+          </tr>
+        </tbody>
+      </table>
+      <div class="table-pagination-outer">
+        <pagination-controls
+          class="table-pagination-inner"
+          (pageChange)="p = $event"
+        ></pagination-controls>
       </div>
     </div>
   </div>
+</div>
