--- a/capstone-crud/src/app/user-facility/user-facility.component.css
+++ b/capstone-crud/src/app/user-facility/user-facility.component.css
@@ -1,5 +1,5 @@
 /* Start of Main Table format */
-.container-equipment {
+.container-facilities {
     width: 100%;
     height: 100%;
     margin: 0;
@@ -15,7 +15,7 @@
     height: 0;
   }
   
-  .container-equipment .container-inside {
+  .container-facilities .container-inside {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -27,7 +27,7 @@
   
   /* Start of Main header format */
   
-  .container-equipment .container-inside .card form {
+  .container-facilities .container-inside .card form {
     width: 900px;
   }
   
@@ -36,7 +36,7 @@
     background-color: var(--darkest-color);
   }
   
-  .container-equipment .container-inside .card p {
+  .container-facilities .container-inside .card p {
     display: flex;
     align-items: center;
     padding: 10px;
@@ -50,17 +50,17 @@
     padding-right: 10px;
   }
   
-  .container-equipment .container-inside .container-filter {
+  .container-facilities .container-inside .container-filter {
     padding: 15px 0px 0px 20px;
   }
   
-  .container-equipment .container-inside .container-filter select {
+  .container-facilities .container-inside .container-filter select {
     padding: 8px 7px;
     border-style: none;
     box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.185);
   }
   
-  .container-equipment .container-inside .container-filter button {
+  .container-facilities .container-inside .container-filter button {
     padding: 10px 20px;
     border-style: none;
     background-color: var(--normal-color);
@@ -73,19 +73,19 @@
   /* End of Header Table format */
   
   /* Start of Table format */
-  .container-equipment .container-inside .container-table {
+  .container-facilities .container-inside .container-table {
     border-spacing: 0;
     width: 100%;
     padding: 0px 0px;
   }
   
-  .container-equipment .container-inside .container-table table {
+  .container-facilities .container-inside .container-table table {
     width: 100%;
     padding: 0px 20px;
     border-spacing: 0px 10px;
   }
   
-  .container-equipment .container-inside .container-table table th {
+  .container-facilities .container-inside .container-table table th {
     color: var(--background-color);
     font-weight: 500;
     padding: 10px 10px;
@@ -93,7 +93,7 @@
     background-color: #660066;
   }
   
-  .container-equipment .container-inside .container-table table td {
+  .container-facilities .container-inside .container-table table td {
     padding: 10px 20px;
     text-align: center;
     background-color: white;
@@ -102,12 +102,36 @@
     color: #5e5e5e;
   }
   
-  .container-equipment .container-inside .container-table table td:nth-child(1) {
+  .container-facilities .container-inside .container-table table td:nth-child(1) {
     font-weight: 700;
   }
   
-  .container-equipment .container-inside .container-table table tr:hover {
+  .container-facilities .container-inside .container-table table tr:hover {
     background-color: var(--lightest-color);
+  }
+  
+  .button {
+    padding: 3px 0px;
+    border-style: none;
+    cursor: pointer;
+    color: #fff;
+    transition: background-color 0.3s ease;
+    border-radius: 4px;
+    transition: 0.5s;
+    font-size: 13px;
+  }
+  
+  .button:hover {
+    transform: scale(1.1);
+  }
+  
+  .active {
+    background-color: var(--green-color);
+  }
+  
+  .inactive {
+    background-color: rgb(143, 143, 143);
+    color: #c9c9c9;
   }
   /* End of Table format */
   
@@ -139,6 +163,26 @@
     color: var(--graydarkest-color);
   }
   /* End of Pagination format */
+  .loader-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(
+      119,
+      119,
+      119,
+      0.6
+    ); /* Adjust the background color and opacity */
+    z-index: -0;
+    margin-top: 120px;
+    margin-left: 100px;
+  }
+  
   .loader-container {
     display: flex;
     justify-content: center;
