--- a/capstone-crud/src/app/consumable-crud/consumable-crud.component.html
+++ b/capstone-crud/src/app/consumable-crud/consumable-crud.component.html
@@ -139,7 +139,7 @@
                 </div>
               </div>
             </td>
-            <td>{{ ConsumableItem.ExpirationDate | date : "yyyy-MM-dd" }}</td>
+            <td>{{ ConsumableItem.ExpirationDate | date : "dd-MM-yyyy" }}</td>
             <td class="table-button">
               <button
                 type="button"
