--- a/capstone-crud/src/app/reports/reports.component.html
+++ b/capstone-crud/src/app/reports/reports.component.html
@@ -116,7 +116,7 @@
     </div>
 
     <div class="container-table">
-      <table class="container" id="content" #content cellspacing="0">
+      <table class="container" #content cellspacing="0">
         <thead>
           <tr>
             <th scope="col">TransactionEquipID</th>
@@ -127,7 +127,8 @@
             <th scope="col">Quantity</th>
             <th scope="col">Date Created</th>
             <th scope="col">Date Returned</th>
-            <th scope="col">Actions</th>
+            <!-- Render the "Actions" column only if not generating PDF -->
+            <th scope="col" *ngIf="!isPDF">Actions</th>
           </tr>
         </thead>
         <tbody>
@@ -152,14 +153,14 @@
             <td>{{ TransactionItem.Quantity }}</td>
             <td>{{ TransactionItem.DateCreated | date : "yyyy-MM-dd" }}</td>
             <td>{{ TransactionItem.DateReturned | date : "yyyy-MM-dd" }}</td>
-            <td class="table-button">
+            <!-- Render the "Actions" cell only if not generating PDF -->
+            <td class="table-button" *ngIf="!isPDF">
               <button
                 type="button"
                 class="btn btn-success"
                 (click)="setUpdate(TransactionItem)"
               >
-                <mat-icon fontIcon="edit" aria-hidden="false"> </mat-icon>
-
+                <mat-icon fontIcon="edit" aria-hidden="false"></mat-icon>
                 Edit
               </button>
               <button
@@ -167,13 +168,14 @@
                 class="btn btn-danger"
                 (click)="setDelete(TransactionItem)"
               >
-                <mat-icon fontIcon="delete" aria-hidden="false"> </mat-icon>
+                <mat-icon fontIcon="delete" aria-hidden="false"></mat-icon>
                 Delete
               </button>
             </td>
           </tr>
         </tbody>
       </table>
+      
       <div class="table-pagination-outer">
         <pagination-controls
           class="table-pagination-inner"
