--- a/capstone-crud/src/app/user-menu/user-menu.component.html
+++ b/capstone-crud/src/app/user-menu/user-menu.component.html
@@ -1,5 +1,5 @@
 <mat-sidenav-container class="sidenav-container">
-  <mat-sidenav #sidenav mode="side" class="mat-elevation-z3" opened="true">
+  <mat-sidenav #sidenav mode="side" class="mat-elevation-z3" opened="false">
     <mat-toolbar color="primary" class="toolbar-with-image">
       <div class="image-container">
         <img [src]="imageUrl" alt="Holy Angel University" />
